[metadata]
name = LDDRF-tillhanke
version = attr: LDDRF.__version__
author = Till Hanke
author_email = till.hanke@chemie.uni-halle.de
description = A package to calculate the linear density density response function 
long_description = file: README.md
long_description_content_type = text/markdown
url = 
project_urls =
    Bug Tracker = 
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    h5py>=3.7.0
    numpy
    pyscf>=2.1.1
    scipy>=1.9.1
    tqdm>=4.64.1
    gitpython>=3.1
[options.entry_points]
console_scripts =
[options.packages.find]
where = src
